# agent-governance-toolkit

./: .cspell-repo-terms.txt  .cspell.json  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml
.claude-plugin/: marketplace.json
.clusterfuzzlite/: build.sh
.github/: CODEOWNERS
agent-governance-antigravity-cli/: package-lock.json  package.json
agent-governance-claude-code/: package-lock.json  package.json
agent-governance-copilot-cli/: package-lock.json  package.json
agent-governance-dotnet/: Directory.Build.props
agent-governance-golang/: README.md
agent-governance-opencode/: package-lock.json  package.json
agent-governance-python/agent-mcp-governance/: pyproject.toml
agent-governance-python/agent-os/: CHANGELOG.md  pyproject.toml
agent-governance-python/agent-os/examples/carbon-auditor/: pyproject.toml
agent-governance-python/agent-os/examples/defi-sentinel/: pyproject.toml
agent-governance-python/agent-os/examples/grid-balancing/: pyproject.toml
agent-governance-python/agent-os/examples/pharma-compliance/: pyproject.toml
agent-governance-python/agent-os/extensions/chrome/: package.json
agent-governance-python/agent-os/extensions/copilot/: package-lock.json  package.json
agent-governance-python/agent-os/extensions/cursor/: package.json
agent-governance-python/agent-os/extensions/mcp-server/: package-lock.json  package.json
agent-governance-python/agent-os/modules/amb/: pyproject.toml
agent-governance-python/agent-os/modules/atr/: pyproject.toml
agent-governance-python/agent-os/modules/caas/: pyproject.toml  requirements.txt
agent-governance-python/agent-os/modules/cmvk/: pyproject.toml
agent-governance-python/agent-os/modules/control-plane/: pyproject.toml
agent-governance-python/agent-os/modules/emk/: pyproject.toml
agent-governance-python/agent-os/modules/iatp/: pyproject.toml
agent-governance-python/agent-os/modules/mcp-kernel-server/: pyproject.toml
agent-governance-python/agent-os/modules/nexus/: pyproject.toml
agent-governance-python/agent-os/modules/observability/: pyproject.toml
agent-governance-python/agent-os/modules/scak/: requirements.txt
agent-governance-python/agent-os/services/cloud-board/: requirements.txt
agent-governance-python/agent-os/services/cloud-board/api/routes/: registry.py
agent-governance-python/agent-os/src/agent_os/: audit_logger.py  base_agent.py  intent.py  mcp_auth_enforcement.py  mcp_security.py  mcp_sliding_rate_limiter.py  prompt_injection.py  prompt_injection_embedding.py  retry.py  secure_codegen.py  semantic_policy.py  stateless.py
agent-governance-python/agent-os/src/agent_os/cli/: mcp_scan.py
agent-governance-python/agent-os/src/agent_os/integrations/: agentshield_adapter.py  base.py  escalation.py
agent-governance-python/agent-os/src/agent_os/policies/: __init__.py  backends.py  context_accumulation.py  context_aggregation.py  context_audit.py  context_delegation.py  context_envelope.py  dynamic_conditions.py  evaluator.py  obligations.py  policy_schema.json  schema.py
agent-governance-python/agent-os/tests/: test_adapter_str_no_leak.py  test_agentshield_adapter.py  test_asi_starter_packs.py  test_dynamic_policy_conditions.py  test_escalation.py  test_integrations.py  test_layer1_primitives.py  test_mcp_scan_cli.py  test_mcp_security.py  test_policy_backends.py  test_pre_execute_check_contract.py  test_prompt_injection_embedding.py  test_retry.py  test_security_policy_enforcement.py  test_stateless.py
agent-governance-python/agent-os/tests/policies/: test_context_accumulation.py  test_context_aggregation.py  test_context_audit_events.py  test_context_delegation.py  test_context_envelope.py  test_obligations.py
docs/: FAQ.md  (+6 more)
(+454 files in other folders)
